2.0.2
-----
  * always use nr_cpus, not maxcpus (bsc#1218180)

2.0.1
-----
  * load.sh: fix fadump (bsc#1218589)

2.0.0
-----
  * add support for riscv64 (bsc#1204214)
  * mkdumprd: fix the check for updated SSH keys
  * prefer by-path and device-mapper aliases (bsc#1217617)
  * udev: don't reload kdump if kernel handles hotplug (jsc#PED-5077)

1.9.8
-----
  * drop obsolete dependency on systemd-sysvinit

1.9.7
-----
  * prevent dracut emergency shell
  * s390: consolidate low-level network configuration with zdev
  * s390: Explicitly request zFCP devices

1.9.6
-----
  * use newer /sys/kernel/fadump/ instead of /sys/kernel/fadump_
  * use kexec -a which falls back to kexec_load(2) automatically
  * update s390 udev rules
  * drop systemd device timeout generator

1.9.5
-----
  * SELinux: temporary hack for bsc#1213721

1.9.4
-----
  * fix FADUMP initramfs when not created by mkdumprd
  * FADUMP: let dracut de-duplicate initrd by preserving modification times
  * mkdumprd: only regenerate FADUMP initrds when needed
  * mkdumprd: exit when destination not writable (transactional updates)
  * mkdumprd: don't call update-bootloader

1.9.3
-----
  * fix calibrate
  * update kdump(7) manpage
  * turn missing ssh, lftp or host key into a fatal error
  * depend on openssh-clients not openssh

1.9.2
-----
  * adapt kdumptool to work with YaST
  * wait for SMTP server to become reachable

1.9.1
-----
  * reimplement e-mail notifications

1.9
---
  * complete rewrite of kdump-save and parts of initrd generation
    * mounts are now entirely handled by dracut
    * deprecated: split dumps (saving to more than one targets at once)
    * deprecated: KDUMPTOOL_FLAGS option removed; original XENALLDOMAINS is now
      the default, disable with MAKEDUMPFILE_OPTIONS=-X
    * deprecated: notification e-mails
    * deprecated: copying of the kernel image (KDUMP_COPY_KERNEL)
    * FTP and SFTP are now handled by lftp, added to the spec file as Recommends: