@@ -1,11 +1,5 @@
-#! /bin/sh
-# -*- mode: shell-script; indent-tabs-mode: nil; sh-basic-offset: 4; -*-
-# ex: ts=8 sw=4 sts=4 et filetype=sh
-
-# This script is sourced, so root should be set. But let's be paranoid
-[ -z "$root" ] && root=$(getarg root=)
-
-# kdump initrd uses a special directory structure
-if [ "$root" = "kdump" ]; then
-    rootok=1
-fi
+#!/bin/sh
+# we don't mount root in kdump
+# prevent dracut from failing because it does not
+# understand root=kdump
+rootok=1
